sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:15: error: ')' expected but ',' found.
    for (i <- getNombreValeurs() - 2 to 0, i --) {
                                         ^AlgCocktailSort1:22: error: illegal start of simple expression
  }
  ^